
[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyframebot"
version = "1.1.8"
description = "A frame-posting bot for Facebook pages"
readme = "README.md"
authors = [{ name = "TheCodingBob", email = "vey90@live.it" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["bot", "facebook", "everyframeinorder", "frame", "order"]
dependencies = [
    "python-facebook-api",
    "Pillow >= 9.4.0",
    "jsonpickle",
    "python-slugify"
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/thecodingbob/framebot"

[project.scripts]
framebot = "framebot.__main__:main"
framebot-migrate = "framebot.migration.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "package.__version__"}


[tool.bumpver]
current_version = "1.1.8"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]


